# dashcam

./: Dockerfile  INSTALL.md  NetworkService.py  README.md  dashcam.py  docker-compose.yml  project-config.jam  requirements.txt  user-config.jam  utils.py
ALPR/: Makefile  __init__.py  alpr.cpp  setup.py
Service/: LicensePlateIdentifier.py  README.md  SpatialInformation.py  VideoCapture.py
Text/: libmain.cpp
Vehicle/: README.md  VehicleDetection.py
Video/: CMakeLists.txt
Video/home/: CMakeLists.txt  home.cpp
Video/include/: opencv_camera_display.h  opencv_decor.h
Video/include/VX/: vx_api.h
Video/work/: work.cpp
assets/: vehicle_measures.csv
scripts/: lpr.py  text_detection.py  video_capture.py
scripts/openalpr/: openalpr.py
